src/objects/Confirmacion__c.object
<CustomObject>
    <description>Copia del objeto Caso, que va a almacenar información de la Apertura y de las diferentes Confirmaciones.</description>
    <fields>
        <fullName>CNF_CAS_Confirmado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check para indicar que el siniestro está confirmado.</description>
        <label>Confirmado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNF_CAS_Danos_Esteticos__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Daños estéticos</description>
        <label>Daños Estéticos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNF_CAS_Danos_Perjudicado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Daños Perjudicados</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNF_CAS_Danos_Propios__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Daños Propios</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNF_CAS_Rechazo_Parcial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rechazo Parcial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNF_CAS_Requiere_Perito__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requiere Perito</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNF_CAS_Siniestro_Grave__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Siniestro Grave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNF_CAS_Tercero_Causante__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tercero Causante</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNF_DAT_Fecha_Apertura__c</fullName>
        <label>Fecha de apertura</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CNF_EMA_Email__c</fullName>
        <label>Correo electrónico</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CNF_LKP_Gestor_Apertura__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gestor Apertura</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Datos_Apertura_Confirmaciones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CNF_LKP_ParentId__c</fullName>
        <label>Siniestro</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Datos Apertura/Confirmaciones</relationshipLabel>
        <relationshipName>Confirmacion</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CNF_NUM_Id_Actuacion_SondeoExt__c</fullName>
        <label>Id Actuación Sondeo Externo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CNF_SEL_Causa_Averia__c</fullName>
        <label>Causa de la Avería</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rotura accidental/Consecuencia de heladas</fullName>
                </value>
                <value>
                    <fullName>Dañado por el impacto</fullName>
                </value>
                <value>
                    <fullName>No dañado por el impacto</fullName>
                </value>
                <value>
                    <fullName>Problema eléctrico</fullName>
                </value>
                <value>
                    <fullName>Problema mecánico</fullName>
                </value>
                <value>
                    <fullName>Caída de árboles sobre la vivienda</fullName>
                </value>
                <value>
                    <fullName>Desperfectos en tejado</fullName>
                </value>
                <value>
                    <fullName>Independientemente de su intensidad</fullName>
                </value>
                <value>
                    <fullName>Inundación de abajo a arriba</fullName>
                </value>
                <value>
                    <fullName>Ocasionado por cortocircuito en aparato del continente y/o instalación</fullName>
                </value>
                <value>
                    <fullName>Ocasionado por descuido del asegurado y/o cortocircuito en aparato del contenido</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CNF_SEL_Causante_Compania__c</fullName>
        <label>Compañía Causante</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Companias_causante</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CNF_SEL_Causante_Provincia__c</fullName>
        <label>Provincia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Provincias</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CNF_SEL_Causante_Responsable__c</fullName>
        <label>Responsable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>Vecino de arriba</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>Vecino de abajo</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>Vecino de la derecha</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>Vecino de la izquierda</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>Comunidad de propietarios</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>Otros</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CNF_SEL_Causante_Tipo_Documento__c</fullName>
        <label>Tipo de Documento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Tipos_DocumentoId</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CNF_SEL_Detalle_averia__c</fullName>
        <label>Detalle de la avería</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                    <label>MANTENIMIENTO DE RADIADORES</label>
                </value>
                <value>
                    <fullName>128</fullName>
                    <label>BAJANTE/SUMIDERO TERRAZAS Y/O CANALONES</label>
                </value>
                <value>
                    <fullName>PLANO Y CURVO</fullName>
                </value>
                <value>
                    <fullName>023</fullName>
                    <label>CRISTAL</label>
                </value>
                <value>
                    <fullName>GRIFOS/LLAVES DE PASO/MECANISMO DE CISTERNA/MANGUITOS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CNF_SEL_Estado_Confirmacion__c</fullName>
        <description>Estados del objeto confirmación</description>
        <label>Estado de la confirmación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>Apertura: Solo Lectura</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>Confirmación en Curso Profesional</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>Confirmación Completada Profesional</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>Confirmación Bloqueada Profesional</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>Confirmación en Curso Gestor</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>Confirmación Completada Gestor</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>pendiente de contactar profesional</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <label>pendiente de contactar cliente</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CNF_SEL_Estado__c</fullName>
        <description>Estado del caso</description>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>004</fullName>
                    <label>Inactivo</label>
                </value>
                <value>
                    <fullName>993</fullName>
                    <default>true</default>
                    <label>Nuevo</label>
                </value>
                <value>
                    <fullName>001</fullName>
                    <label>En curso</label>
                </value>
                <value>
                    <fullName>007</fullName>
                    <label>No Abierto</label>
                </value>
                <value>
                    <fullName>006</fullName>
                    <label>Anulado</label>
                </value>
                <value>
                    <fullName>000</fullName>
                    <label>Cubierto</label>
                </value>
                <value>
                    <fullName>005</fullName>
                    <label>Pdte de Sondeo</label>
                </value>
                <value>
                    <fullName>003</fullName>
                    <label>Cerrado</label>
                </value>
                <value>
                    <fullName>353</fullName>
                    <label>En espera profesional por confirmación</label>
                </value>
                <value>
                    <fullName>995</fullName>
                    <label>En espera Gestor por confirmación</label>
                </value>
                <value>
                    <fullName>700</fullName>
                    <label>Pendiente de Cliente envio Documentación Inicial</label>
                </value>
                <value>
                    <fullName>799</fullName>
                    <label>Cierre por empresa externa</label>
                </value>
                <value>
                    <fullName>788</fullName>
                    <label>Pendiente de empresa externa</label>
                </value>
                <value>
                    <fullName>733</fullName>
                    <label>Expediente Rechazado por Cia</label>
                </value>
                <value>
                    <fullName>701</fullName>
                    <label>Pendiente de perjudicado envíode documentación</label>
                </value>
                <value>
                    <fullName>723</fullName>
                    <label>Pdte. Cliente envío Documentación correcta/complementaria</label>
                </value>
                <value>
                    <fullName>790</fullName>
                    <label>Carta 15 días Santander</label>
                </value>
                <value>
                    <fullName>791</fullName>
                    <label>Carta 30 días Santander</label>
                </value>
                <value>
                    <fullName>792</fullName>
                    <label>Carta 60 días Santander</label>
                </value>
                <value>
                    <fullName>793</fullName>
                    <label>Rechazo Ausencia de Documentación</label>
                </value>
                <value>
                    <fullName>794</fullName>
                    <label>Carta 150 días</label>
                </value>
                <value>
                    <fullName>740</fullName>
                    <label>Recibida documentación, pendiente de tramitar.</label>
                </value>
                <value>
                    <fullName>729</fullName>
                    <label>Documentación recibida FollowMy Claim</label>
                </value>
                <value>
                    <fullName>730</fullName>
                    <label>Expediente Rechazado Apertura</label>
                </value>
                <value>
                    <fullName>741</fullName>
                    <label>Pendiente asegurado</label>
                </value>
                <value>
                    <fullName>731</fullName>
                    <label>Expediente Rechazado en Indemnizables</label>
                </value>
                <value>
                    <fullName>732</fullName>
                    <label>Expediente Rechazado por  Perito</label>
                </value>
                <value>
                    <fullName>721</fullName>
                    <label>Pendiente de Perito</label>
                </value>
                <value>
                    <fullName>710</fullName>
                    <label>Expediente Tramitado</label>
                </value>
                <value>
                    <fullName>698</fullName>
                    <label>Pendiente de Accion Inicial</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CNF_SEL_Grupo_Causa__c</fullName>
        <label>Grupo de Causa</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>AGUA</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>CRISTALES</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>ELECTRICOS</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>EXTENSION DE GARANTIAS</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>INCENDIO</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>OTRAS CONTINGENCIAS</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>R.C.</label>
                </value>
                <value>
                    <fullName>09</fullName>
                    <label>RECHAZOS</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>ROBO</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>S. ADICIONALES</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <label>TODO RIESGO ACCIDENTAL</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CNF_SEL_Motivo_Rechazo__c</fullName>
        <label>Motivo Rechazo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Motivo_Rechazo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CNF_SEL_Otros_Danos__c</fullName>
        <label>Otros Daños Propios</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALIMENTOS REFRIGERADOS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CNF_SEL_Situacion_Danos_Propios__c</fullName>
        <description>Conjunto que incluye los diferentes daños que puede ocasionar un Siniestro en el Asegurado.</description>
        <label>Situación Daños Propios</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACUARIOS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CNF_SEL_Sondeo_DocIndemSug__c</fullName>
        <label>Sondeo: Documentacion Indemnizable Suger</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Tipos_de_Documento_Indeminizable</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CNF_SEL_Sondeo_DocsIndemnizable__c</fullName>
        <label>Sondeo: Documentos Indemnizable</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Tipos_de_Documento_Indeminizable</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CNF_SEL_Sondeo_Fase__c</fullName>
        <label>Sondeo: Fase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Fases_Sondeo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CNF_SEL_Sondeo_Gremios__c</fullName>
        <label>Sondeo: Gremios Sugeridos</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Gremios</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CNF_SEL_Tipo_Averia__c</fullName>
        <label>Tipo de Avería</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                    <label>ACCESO Y/O DAÑOS PROVOCADOS POR OCUPAS</label>
                </value>
                <value>
                    <fullName>050</fullName>
                    <label>ATASCO</label>
                </value>
                <value>
                    <fullName>038</fullName>
                    <label>ROTURA DE: CRISTAL Y/O VINILO</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CNF_SEL_Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Reparable</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Mixto</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Indemnizable</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Rechazo en apertura</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Reparable, mixto e indemnizable. Cubre todo</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>No Abierto en Llamada</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Cobertura Adicional</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>Rechazo en confirmación parcial</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>Rechazo en confirmación total</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Asistencia con Cobertura</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>Llamadas</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>Manitas</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>Servicio Especial Reparable</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>Servicio Especial Indemnizable</label>
                </value>
                <value>
                    <fullName>98</fullName>
                    <label>Preventivo</label>
                </value>
                <value>
                    <fullName>99</fullName>
                    <label>Correctivo</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CNF_TFN_Telefono_1__c</fullName>
        <label>Teléfono 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CNF_TFN_Telefono_2__c</fullName>
        <label>Teléfono 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CNF_TXT_Apellidos2__c</fullName>
        <label>Segundo Apellido</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNF_TXT_Apellidos__c</fullName>
        <label>Primer Apellido</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNF_TXT_Causante_Direccion__c</fullName>
        <label>Dirección Causante</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNF_TXT_Causante_N_Documento__c</fullName>
        <label>Nº de Documento</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNF_TXT_Causante_N_exp_Stro__c</fullName>
        <label>Nº de Exp./Stro</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNF_TXT_Causante_Poblacion__c</fullName>
        <label>Población</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNF_TXT_Causante_Poliza_R_C__c</fullName>
        <label>Nº de Póliza R.C.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNF_TXT_Codigo_Postal__c</fullName>
        <label>Código Postal</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNF_TXT_Comentario__c</fullName>
        <label>Comentario</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CNF_TXT_Nombre__c</fullName>
        <label>Nombre</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNF_TXT_S_Garantias__c</fullName>
        <description>Campo en el que se almacenan durante la confirmación de un siniestro las salidas del árbol de decisión para las garantías</description>
        <label>Salida: Garantías</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CNF_TXT_Sondeo_Causa__c</fullName>
        <description>Campo que describe la causa que se le informa a la Compañía Aseguradora</description>
        <label>Sondeo Causa</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Datos Apertura/Confirmaciones</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Datos Apertura/Confirmaciones</pluralLabel>
    <recordTypes>
        <fullName>CNF_Apertura_Finalizada</fullName>
        <active>true</active>
        <label>Apertura_Finalizada</label>
    </recordTypes>
    <recordTypes>
        <fullName>CNF_Gestor</fullName>
        <active>true</active>
        <description>RecordType para la visión de la confirmación del gestor.</description>
        <label>Gestor</label>
    </recordTypes>
    <recordTypes>
        <fullName>CNF_Profesional</fullName>
        <active>true</active>
        <description>RecordType para la visión de la confirmación del profesional.</description>
        <label>Profesional</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Longitud_Comentario_Confirmacion</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(CNF_TXT_Comentario__c)) &amp;&amp; NOT(ISNULL(CNF_TXT_Comentario__c)) &amp;&amp; LEN(CNF_TXT_Comentario__c)&lt;=14</errorConditionFormula>
        <errorMessage>El comentario de la confirmación debe tener más de 14 caracteres</errorMessage>
    </validationRules>
</CustomObject>